[build-system]
requires = ["setuptools", "wheel", "meson", "ninja", "pdbpp", "rich"]
build-backend = "setuptools.build_meta"

[project]
name = "mm-build-test-devices"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
build = ["meson>=0.18.0", "ninja>=1.11.1.4"]
test = ["pytest"]
dev = [
    "ipython>=9.2.0",
    "rich>=14.0.0",
    "ruff>=0.11.9",
    { include-group = "build" },
    { include-group = "test" },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
